# Sitri

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: main.rs
src/commands/: mod.rs  scp.rs  system.rs  test.rs
